src/app/components/product/product.component.scss
/* ... */
.title-change {
  cursor: pointer;
  display: flex;
  align-items: center;
  gap: 8px;
  color: #352F2A;
  font-family: Manrope;
  font-size: 24px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  letter-spacing: -0.96px;
}

.image-change {
  width: 28px;
  height: 28px;
  flex-shrink: 0;
}

.title-product {
  color: #352F2A;
  font-family: Manrope;
  font-size: 48px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  display: flex;
  flex-direction: column;
}

.title-product-span-price {
  font-weight: 600;
}

.title-product-text {
  color: #352F2A;
  font-family: Manrope;
  font-size: 24px;
  font-style: normal;
  font-weight: 600;
  line-height: normal;
  letter-spacing: -0.96px;
  margin-top: 290px;
  margin-bottom: 8px;
}

.image-color {
  padding: 6px;
}

.image-color:active {
  border: #352F2A 3px solid;
  border-radius: 50%;
  padding: 3px;
}

.line {
  width: 808px;
  height: 2px;
  flex-shrink: 0;
  background: #352F2A;
  margin-bottom: 8px;
}

.text-product {
  color: #352F2A;
  font-family: Manrope;
  font-size: 24px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  letter-spacing: -0.96px;
  width: 809px;
  margin-bottom: 32px;
}

.title-product-text-garanty {
  color: #352F2A;
  font-family: Manrope;
  font-size: 24px;
  font-style: normal;
  font-weight: 600;
  line-height: normal;
  letter-spacing: -0.96px;
  margin-bottom: 32px;
}

.button-product {
  color: #352F2A;
  font-family: Manrope;
  font-size: 24px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  border: #352F2A 1px solid;display: flex;
  width: 350px;
  padding: 16px 120px;
  justify-content: center;
  align-items: center;
  gap: 10px;
  border-radius: 40px;
  border: 2px solid #352F2A;
  transition: all 0.3s ease;
  margin-top: 64px;
  background: #E8E4D9;
}

.button-product:hover {
  background: #352F2A;
  color: #E8E4D9;
}

.buttons-product {
  display: flex;
  gap: 16px;
}

.button-products {
  color: #E8E4D9;
  font-family: Manrope;
  font-size: 24px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  display: flex;
  padding: 16px 32px;
  justify-content: center;
  align-items: center;
  gap: 10px;
  border-radius: 40px;
  border: 2px solid #352F2A;
  background: #352F2A;
  transition: all 0.3s ease;
}

.button-products:hover {
  background: #E8E4D9;
  color: #352F2A;
}

.title-info-product {
  color: #352F2A;
  font-family: Manrope;
  font-size: 48px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  letter-spacing: -1.92px;
}

.line-info {
  width: 889px;
  height: 2px;
  flex-shrink: 0;
  background: #352F2A;
  margin-top: 8px;
  margin-bottom: 16px;
}

.lists-info-product {
  display: flex;
  gap: 64px;
}

.list-info {
  display: flex;
  flex-direction: column;
  gap: 32px;
  width: 410px;
}

.item-info-title {
  color: #352F2A;
  font-family: Manrope;
  font-size: 24px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
}

.block-info-left {
  margin-top: 8px;
}

.textarea-info {
  color: #352F2A;
  font-family: Manrope;
  font-size: 24px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  min-height: 387px;
  background-color: #E8E4D9;
  resize: none;
}

.textarea-info-info {
  color: #352F2A;
  font-family: Manrope;
  font-size: 24px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  max-width: 434px;
  min-height: 301px;
  background-color: #E8E4D9;
  resize: none;
}

.textarea-info-info-left {
  max-width: 840px;
  min-height: 330px;
  background-color: transparent;
  resize: none;
}

.textarea-info-info-left-text {
  color: #352F2A;
  font-family: Manrope;
  font-size: 24px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
}

.block-info-product {
  display: flex;
  justify-content: space-between;
}

.line-info-left {
  width: 840px;
  height: 2px;
  flex-shrink: 0;
  background: #352F2A;
}

.list-info-left {
  display: flex;
  flex-direction: column;
  gap: 48px;
  margin-top: 16px;
  width: 840px;
}

.title-popular {
  color: #352F2A;
  font-family: "SONGER SemiExpanded";
  font-size: 128px;
  font-style: normal;
  font-weight: 400;
  margin-top: 90px;
  margin-bottom: 32px;
}

.item-info-left {
  color: #352F2A;
  font-family: Manrope;
  font-size: 24px;
  font-style: normal;
  font-weight: 600;
  line-height: normal;
  letter-spacing: -0.96px;
}

.item-info-left-garanty {
  color: #352F2A;
  font-family: Manrope;
  font-size: 24px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  cursor: pointer;
}

.item-info-left-garanty-line {
  width: 522px;
  height: 2px;
  flex-shrink: 0;
  background: #352F2A;
}

.item-info-left-span {
  color: #352F2A;
  font-family: Manrope;
  font-size: 24px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  letter-spacing: -0.96px;
}

.item-info-left-span {
  color: #352F2A;
  font-family: Manrope;
  font-size: 24px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  letter-spacing: -0.96px;
}

.list-popular {
  display: flex;
  justify-content: space-between;
  margin-top: 48px;
}

.item-popular {
  cursor: pointer;
  padding: 24px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 32%;
  height: 698px;
  border-radius: 8px;
  background: #DAD5C9;
}

.image-popular-arrow {
  width: 45px;
  height: 45px;
  display: flex;
  margin-left: auto;
}

.text-popular {
  color: #5C544C;
  font-family: Manrope;
  font-size: 20px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  letter-spacing: -0.8px;
}

.text-popular-price {
  color: #352F2A;
  font-family: Manrope;
  font-size: 24px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  letter-spacing: -0.96px;
}

// FOOTER

.footer {
  padding: 80px;
  background: #352F2A;
}

.container-footer-top {
  display: flex;
  align-items: start;
}
/* ... */

